8195806: Eliminate dependency on sun.font.lookup in javafx.graphics
Reviewed-by: prr, kcr